# draw64

./: LICENSE  Procfile  README.md  index.html  locustfile.py  pyproject.toml  requirements.txt
draw64/: api_router.py  app.py  connection_manager.py  event.py  event_factory.py  image.py  image_collection.py  image_id.py  models.py  pubsub.py  sse_router.py  state.py  statistics.py  update_image_request.py  words.txt  ws_router.py
draw64/routes/: api.py  sse.py  ws.py
static/: addRemove.js  canvas.js  controls.js  dropdown.js  palette.js  webSocket.js
